# dvmn-chatbot-part6-pizza

./: README.md  delivery_tools.py  dvmn_chatbot_6_pizza.ipynb  geopy.ipynb  main.py  moltin_api.py  pyproject.toml  schemas.py  services.py  settings.py  tmp.py
scripts/: get_products.py  upload_products_to_cms.py
