[tool.poetry]
name = "dvmn-chatbot-part4-cms"
version = "0.1.0"
description = ""
authors = ["Dmitriy Suchkov <Account.log@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
anyio = "^3.1.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
httpx = {extras = ["http2"], version = "^0.18.1"}
aiogram = "^2.13"
more-itertools = "^8.8.0"
aioredis = "^1.3.1"
APScheduler = "^3.7.0"
async-property = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
